# philosopherscleaners_master

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.db
app/config/: setting.py
app/db/: session.py
app/events/: interface.py  kafka_producer.py  kafka_service.py  suage.py
app/middleware/: http_middleware.py  rate_limiter.py  token_checker.py
app/model/: order.py  order_item.py  user.py
app/model/enums/: order_enums.py  payment_enums.py
app/routers/: auth.py  order.py
app/schema/: order.py  user.py
app/service/: create_user.py
app/service/interfaces/: jwt_token_interface.py  order_interface.py  password_hasher_interface.py  user_service_interface.py
app/service/order/: order_service.py  place_order.py
app/service/security/: hasher.py  jwt_token.py
app/service/user/: register_user.py
app/service/userservice/: login_user.py  register_user.py  user_service.py
app/utils/: dependencies.py  logging.py
test/integration_test/: test_integration_api.py
test/unit_test/: test_api.py
