[project]
name = "philosopherscleaners-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn>=0.39.0",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.3",
    "pyserial>=3.5",
    "pytest>=8.4.2",
    "kafka>=1.3.5",
]
